# dioxusProject

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md  package-lock.json  tailwind.config.js
src/: main.rs
