[package]
name = "dioxusProject"
version = "0.1.0"
edition = "2021"

[application]
out_dir = "dist" #Build directiory

[dependencies]
axum = "0.7.4"
dioxus = "0.4.3"
dioxus-fullstack = "0.4.3"
dioxus-router = "0.4.3"
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["full"] }

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
